--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,12 @@
 [phases.setup]
-nixPkgs = ["python310", "nodejs"]
+nixPkgs = ["python310Full", "nodejs", "python310Packages.pip", "python310Packages.setuptools"]
 
 [phases.install]
-cmds = ["bash install.sh"]
+cmds = [
+    "python -m ensurepip --upgrade",
+    "python -m pip install --upgrade pip setuptools wheel",
+    "bash install.sh"
+]
 
 [phases.build]
 cmds = ["cd frontend && npm run build"]
