fix: simplificar configuração do Nixpacks para evitar erro de pip

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,8 @@
 [phases.setup]
-nixPkgs = ["python310Full", "nodejs", "python310Packages.pip", "python310Packages.setuptools"]
+nixPkgs = ["python310Full", "nodejs"]
 
 [phases.install]
-cmds = [
-    "python -m ensurepip --upgrade",
-    "python -m pip install --upgrade pip setuptools wheel",
-    "bash install.sh"
-]
+cmds = ["bash install.sh"]
 
 [phases.build]
 cmds = ["cd frontend && npm run build"]
