feat: adicionar script Python para instalação robusta de dependências

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["python310Full", "nodejs"]
 
 [phases.install]
-cmds = ["bash install.sh"]
+cmds = ["python install_deps.py"]
 
 [phases.build]
-cmds = ["cd frontend && npm run build"]
+cmds = ["echo 'Build já foi feito no install'"]
 
 [start]
 cmd = "bash run.sh" 
