--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,8 @@
 [phases.setup]
-nixPkgs = ["python310Full", "nodejs", "python310Packages.pip", "python310Packages.setuptools", "python310Packages.wheel"]
+nixPkgs = ["python310Full", "nodejs"]
 
 [phases.install]
-cmds = [
-    "python -m pip install --upgrade pip setuptools wheel",
-    "python install_deps.py"
-]
+cmds = ["python install_deps.py"]
 
 [phases.build]
 cmds = ["echo 'Build já foi feito no install'"]
