--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,11 +2,7 @@
 nixPkgs = ["python310Full", "nodejs", "python310Packages.pip", "python310Packages.setuptools", "python310Packages.wheel"]
 
 [phases.install]
-cmds = [
-    "python -m ensurepip --user",
-    "python -m pip install --upgrade pip setuptools wheel --user",
-    "python install_deps.py"
-]
+cmds = ["python install_deps.py"]
 
 [phases.build]
 cmds = ["echo 'Build já foi feito no install'"]
